cabal-version:      3.0
name:               RSA-public-key-encryption-system
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             Ibrahim Rahimli
maintainer:         ibrahim.rahimli20016@gmail.com
-- copyright:
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable RSA-public-key-encryption-system
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base >= 4.7 && < 5, random, text, containers
    hs-source-dirs:   app
    default-language: Haskell2010
